# sports-ai-bettor-

./: .env.example  .gitignore  00_START_HERE.md  ADVANCED_TRAINING_COMPLETE.md  COMMANDS.sh  CONTRIBUTING.md  CSV_SETUP_SUMMARY.md  CSV_TRAINING_GUIDE.md  DEPLOYMENT_COMPLETE.md  ENHANCED_COMPLETION_REPORT.md  ENHANCEMENT_SUMMARY.md  ENVIRONMENT_SETUP.md  EXECUTION_SUMMARY.md  INDEX.md  INSTALLATION_GUIDE.md  INSTALLATION_SUCCESS.md  LICENSE  LIVE_DATA_INTEGRATION_SUMMARY.md  PROJECT_REPORT.md  QUICKSTART.md  QUICKSTART.sh  QUICK_REFERENCE.md  README.md  SETTINGS_OPTIMIZATION_SUMMARY.md  SETTINGS_QUICK_REFERENCE.md  SETTINGS_REVIEW.md  SETUP_ENHANCEMENT_GUIDE.md  SETUP_FINAL_SUMMARY.md  SETUP_GUIDE.md  cli_app.py  daily_predictions.py  data_fetch.py  data_pipeline.py  enhanced_data_pipeline.py  examples_live_data.py  generate_todays_bets.py  predictor.py  pyproject.toml  release-notes_Version3.md  requirements.txt  (+11 more)
config/: settings.py
data/: DATA_GUIDE.md
docs/: ADVANCED_USAGE.md  API_REFERENCE.md
sports_ai_bettor/: __version__.py
src/: __init__.py  data_fetch.py  integrated_prediction.py  live_sports_data.py  logger.py  predictor.py  unified_data_source.py  utils.py
tests/: conftest.py  test_data_fetch.py  test_predictor.py  test_utils.py
